Fixed color contrast

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -3,4 +3,5 @@
     --vp-c-brand-2: #a22a21;
     --vp-c-brand-3: #AA0000;
     --vp-c-brand-soft: #AA0000;
+    --vp-code-color: #dc2626;
 }
